--- a/layout/about.html
+++ b/layout/about.html
@@ -142,22 +142,26 @@
                         <span class="link-name">Home</span>
                     </a>
                 </li>
-                <li><a href="pemasukan.php">
+                <li><a href="keuangan.php?type=pemasukan">
                         <i class="uil uil-folder-plus"></i>
                         <span class="link-name">Pemasukan</span>
-                    </a></li>
-                <li><a href="pengeluaran.php">
+                    </a>
+                </li>
+                <li><a href="keuangan.php?type=pengeluaran">
                         <i class="uil uil-folder-minus"></i>
                         <span class="link-name">Pengeluaran</span>
-                    </a></li>
+                    </a>
+                </li>
                 <li><a href="grafik.php">
                         <i class="uil uil-analytics"></i>
                         <span class="link-name">Grafik</span>
-                    </a></li>
+                    </a>
+                </li>
                 <li><a href="about.php">
                         <i class="uil uil-cloud-info"></i>
                         <span class="link-name">About</span>
-                    </a></li>
+                    </a>
+                </li>
             </ul>
 
             <ul class="logout-mode">
