--- a/layout/grafik.html
+++ b/layout/grafik.html
@@ -30,22 +30,26 @@
                         <span class="link-name">Home</span>
                     </a>
                 </li>
-                <li><a href="pemasukan.php">
+                <li><a href="keuangan.php?type=pemasukan">
                         <i class="uil uil-folder-plus"></i>
                         <span class="link-name">Pemasukan</span>
-                    </a></li>
-                <li><a href="pengeluaran.php">
+                    </a>
+                </li>
+                <li><a href="keuangan.php?type=pengeluaran">
                         <i class="uil uil-folder-minus"></i>
                         <span class="link-name">Pengeluaran</span>
-                    </a></li>
+                    </a>
+                </li>
                 <li><a href="grafik.php">
                         <i class="uil uil-analytics"></i>
                         <span class="link-name">Grafik</span>
-                    </a></li>
+                    </a>
+                </li>
                 <li><a href="about.php">
                         <i class="uil uil-cloud-info"></i>
                         <span class="link-name">About</span>
-                    </a></li>
+                    </a>
+                </li>
             </ul>
 
             <ul class="logout-mode">
@@ -69,7 +73,9 @@
             <div class="title">
                 <i class="uil uil-analytics"></i>
                 <span class="text">Grafik</span>
+                
             </div>
+            <canvas id="myChart"></canvas>
         </div>
     </section>
 
@@ -77,7 +83,54 @@
     <script>
         const incomeDataPerMonth = INCOME_DATA;
         const expenseDataPerMonth = EXPENSE_DATA;
-        
+        console.log(INCOME_DATA);
+        console.log(EXPENSE_DATA);
+
+        // Membuat array label dengan nama semua bulan
+        const labels = ['Januari', 'Februari', 'Maret', 'April', 'Mei', 'Juni', 'Juli', 'Agustus', 'September', 'Oktober', 'November', 'Desember'];
+
+        // Mengubah data pendapatan dan pengeluaran menjadi format yang sesuai
+        // Misalnya, jika incomeDataPerMonth adalah { '2024-01': 500, '2024-02': 600, ... }
+        // Maka incomeData harus menjadi [500, 600, ...]
+        const incomeData = labels.map((month, index) => {
+            // Menambahkan 1 ke index karena bulan di JavaScript dimulai dari 0
+            const monthInData = `2024-${String(index + 1).padStart(2, '0')}`;
+            return incomeDataPerMonth[monthInData] || 0;
+        });
+        const expenseData = labels.map((month, index) => {
+            const monthInData = `2024-${String(index + 1).padStart(2, '0')}`;
+            return expenseDataPerMonth[monthInData] || 0;
+        });
+
+        // Membuat grafik batang
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: 'Pemasukan',
+                    data: incomeData,
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                },
+                {
+                    label: 'Pengeluaran',
+                    data: expenseData,
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
     </script>
 </body>
 
